v0.0.1/modules/schema/pages/class/GovHydroFrancis.adoc
= `GovHydroFrancis`
:toclevels: 4


+++Detailed hydro unit - Francis model.  This model can be used to represent three types of governors.
A schematic of the hydraulic system of detailed hydro unit models, such as Francis and Pelton, is provided in the DetailedHydroModelHydraulicSystem diagram.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovHydroFrancis`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovHydroFrancis`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovHydroFrancis {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

















































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



























GovHydroFrancis -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovHydroFrancis -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovHydroFrancis -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovHydroFrancis -> DiagramObject: DiagramObjects


GovHydroFrancis -> InstanceSet: InstanceSet


GovHydroFrancis -> Name: Names


GovHydroFrancis -> ChangeSetMember: PropertiesCIMDataObject


GovHydroFrancis -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<am,`am`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Opening section <i>S</i><i><sub>EFF</sub></i> at the maximum efficiency (<i>Am</i>).  Typical value = 0,7.+++

| <<av0,`av0`>>
| 0..1
| xref::class/Area.adoc[`Area`]
| +++Area of the surge tank (<i>A</i><i><sub>V0</sub></i>). Unit = m<sup>2</sup>. Typical value = 30.+++

| <<av1,`av1`>>
| 0..1
| xref::class/Area.adoc[`Area`]
| +++Area of the compensation tank (<i>A</i><i><sub>V1</sub></i>). Unit = m<sup>2</sup>. Typical value = 700.+++

| <<bp,`bp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Droop (<i>Bp</i>).  Typical value = 0,05.+++

| <<db1,`db1`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Intentional dead-band width (<i>DB1</i>).  Unit = Hz.  Typical value = 0.+++

| <<etamax,`etamax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum efficiency (<i>EtaMax</i>).  Typical value = 1,05.+++

| <<governorControl,`governorControl`>>
| 0..1
| xref::enumeration/FrancisGovernorControlKind.adoc[`FrancisGovernorControlKind`]
| +++Governor control flag (<i>Cflag</i>).  Typical value = mechanicHydrolicTachoAccelerator.+++

| <<h1,`h1`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Head of compensation chamber water level with respect to the level of penstock (<i>H</i><i><sub>1</sub></i>).  Unit = km.  Typical value = 0,004.+++

| <<h2,`h2`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Head of surge tank water level with respect to the level of penstock (<i>H</i><i><sub>2</sub></i>).  Unit = km.  Typical value = 0,040.+++

| <<hn,`hn`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Rated hydraulic head (<i>H</i><i><sub>n</sub></i>).  Unit = km.  Typical value = 0,250.+++

| <<kc,`kc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Penstock loss coefficient (due to friction) (<i>Kc</i>).  Typical value = 0,025.+++

| <<kg,`kg`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Water tunnel and surge chamber loss coefficient (due to friction) (<i>Kg</i>).  Typical value = 0,025.+++

| <<kt,`kt`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Washout gain (<i>Kt</i>).  Typical value = 0,25.+++

| <<qc0,`qc0`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++No-load turbine flow at nominal head (<i>Qc0</i>).  Typical value = 0,1.+++

| <<qn,`qn`>>
| 0..1
| xref::class/VolumeFlowRate.adoc[`VolumeFlowRate`]
| +++Rated flow (<i>Q</i><i><sub>n</sub></i>). Unit = m<sup>3</sup>/s. Typical value = 250.+++

| <<ta,`ta`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Derivative gain (<i>Ta</i>) (&gt;= 0).  Typical value = 3.+++

| <<td,`td`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Td</i>) (&gt;= 0).  Typical value = 6.+++

| <<ts,`ts`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Gate servo time constant (<i>Ts</i>) (&gt;= 0).  Typical value = 0,5.+++

| <<twnc,`twnc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Water inertia time constant (<i>Twnc</i>) (&gt;= 0).  Typical value = 1.+++

| <<twng,`twng`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Water tunnel and surge chamber inertia time constant (<i>Twng</i>) (&gt;= 0). Typical value = 3.+++

| <<tx,`tx`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Derivative feedback gain (<i>Tx</i>) (&gt;= 0).  Typical value = 1.+++

| <<va,`va`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum gate opening velocity (<i>Va</i>).  Unit = PU / s.  Typical value = 0,06.+++

| <<valvmax,`valvmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum gate opening (<i>ValvMax</i>) (&gt; GovHydroFrancis.valvmin).  Typical value = 1,1.+++

| <<valvmin,`valvmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum gate opening (<i>ValvMin</i>) (&lt; GovHydroFrancis.valvmax).  Typical value = 0.+++

| <<vc,`vc`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum gate closing velocity (<i>Vc</i>).  Unit = PU / s.  Typical value = -0,06.+++

| <<waterTunnelSurgeChamberSimulation,`waterTunnelSurgeChamberSimulation`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Water tunnel and surge chamber simulation (<i>Tflag</i>).
true = enable of water tunnel and surge chamber simulation
false = inhibit of water tunnel and surge chamber simulation.
Typical value = false.+++

| <<zsfc,`zsfc`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Head of upper water level with respect to the level of penstock (<i>Zsfc</i>). Unit = km.  Typical value = 0,025.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#am]
=== `am`
+++Opening section <i>S</i><i><sub>EFF</sub></i> at the maximum efficiency (<i>Am</i>).  Typical value = 0,7.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.am`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#av0]
=== `av0`
+++Area of the surge tank (<i>A</i><i><sub>V0</sub></i>). Unit = m<sup>2</sup>. Typical value = 30.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.av0`
| Cardinality
| 0..1
| Type
| xref::class/Area.adoc[`Area`]


|===

//[discrete]
[#av1]
=== `av1`
+++Area of the compensation tank (<i>A</i><i><sub>V1</sub></i>). Unit = m<sup>2</sup>. Typical value = 700.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.av1`
| Cardinality
| 0..1
| Type
| xref::class/Area.adoc[`Area`]


|===

//[discrete]
[#bp]
=== `bp`
+++Droop (<i>Bp</i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.bp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#db1]
=== `db1`
+++Intentional dead-band width (<i>DB1</i>).  Unit = Hz.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.db1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#etamax]
=== `etamax`
+++Maximum efficiency (<i>EtaMax</i>).  Typical value = 1,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.etamax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#governorControl]
=== `governorControl`
+++Governor control flag (<i>Cflag</i>).  Typical value = mechanicHydrolicTachoAccelerator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.governorControl`
| Cardinality
| 0..1
| Type
| xref::enumeration/FrancisGovernorControlKind.adoc[`FrancisGovernorControlKind`]


|===

//[discrete]
[#h1]
=== `h1`
+++Head of compensation chamber water level with respect to the level of penstock (<i>H</i><i><sub>1</sub></i>).  Unit = km.  Typical value = 0,004.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.h1`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#h2]
=== `h2`
+++Head of surge tank water level with respect to the level of penstock (<i>H</i><i><sub>2</sub></i>).  Unit = km.  Typical value = 0,040.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.h2`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#hn]
=== `hn`
+++Rated hydraulic head (<i>H</i><i><sub>n</sub></i>).  Unit = km.  Typical value = 0,250.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.hn`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kc]
=== `kc`
+++Penstock loss coefficient (due to friction) (<i>Kc</i>).  Typical value = 0,025.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.kc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kg]
=== `kg`
+++Water tunnel and surge chamber loss coefficient (due to friction) (<i>Kg</i>).  Typical value = 0,025.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.kg`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kt]
=== `kt`
+++Washout gain (<i>Kt</i>).  Typical value = 0,25.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.kt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#qc0]
=== `qc0`
+++No-load turbine flow at nominal head (<i>Qc0</i>).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.qc0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#qn]
=== `qn`
+++Rated flow (<i>Q</i><i><sub>n</sub></i>). Unit = m<sup>3</sup>/s. Typical value = 250.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.qn`
| Cardinality
| 0..1
| Type
| xref::class/VolumeFlowRate.adoc[`VolumeFlowRate`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#ta]
=== `ta`
+++Derivative gain (<i>Ta</i>) (&gt;= 0).  Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#td]
=== `td`
+++Washout time constant (<i>Td</i>) (&gt;= 0).  Typical value = 6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ts]
=== `ts`
+++Gate servo time constant (<i>Ts</i>) (&gt;= 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.ts`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#twnc]
=== `twnc`
+++Water inertia time constant (<i>Twnc</i>) (&gt;= 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.twnc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#twng]
=== `twng`
+++Water tunnel and surge chamber inertia time constant (<i>Twng</i>) (&gt;= 0). Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.twng`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tx]
=== `tx`
+++Derivative feedback gain (<i>Tx</i>) (&gt;= 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.tx`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#va]
=== `va`
+++Maximum gate opening velocity (<i>Va</i>).  Unit = PU / s.  Typical value = 0,06.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.va`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#valvmax]
=== `valvmax`
+++Maximum gate opening (<i>ValvMax</i>) (&gt; GovHydroFrancis.valvmin).  Typical value = 1,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.valvmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#valvmin]
=== `valvmin`
+++Minimum gate opening (<i>ValvMin</i>) (&lt; GovHydroFrancis.valvmax).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.valvmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vc]
=== `vc`
+++Maximum gate closing velocity (<i>Vc</i>).  Unit = PU / s.  Typical value = -0,06.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.vc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#waterTunnelSurgeChamberSimulation]
=== `waterTunnelSurgeChamberSimulation`
+++Water tunnel and surge chamber simulation (<i>Tflag</i>).
true = enable of water tunnel and surge chamber simulation
false = inhibit of water tunnel and surge chamber simulation.
Typical value = false.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.waterTunnelSurgeChamberSimulation`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#zsfc]
=== `zsfc`
+++Head of upper water level with respect to the level of penstock (<i>Zsfc</i>). Unit = km.  Typical value = 0,025.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroFrancis.zsfc`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===


